--- a/src/APP_PROPERTIES.PROPERTIES
+++ b/src/APP_PROPERTIES.PROPERTIES
@@ -64,7 +64,7 @@ DOWNLOAD_URL_BASE = http://10.2.1.52/zeni/obtenerComprobante.html?
 DOWNLOAD_PARAM_1 = tipoComprobante=
 DOWNLOAD_PARAM_2 = &idComprobante=
 DOWNLOAD_PARAM_3 = &anexo=
-DOWNLOAD_URL_TENENCIA=http://10.2.1.52/zeni/obtenerHistoricoTV.html?
+DOWNLOAD_URL_TENENCIA=http://10.2.1.60:8080/zeni/obtenerHistoricoTV.html?
 DOWNLOAD_PARAM_1_TENENCIA=fechaHistorico=
 DOWNLOAD_PARAM_2_TENENCIA=&cClienteId=
  
